test/integration/progs/errors/for_2.blu
for x in 5 {
	print x
}
